WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39179
Shrink SimpleFontData
https://bugs.webkit.org/show_bug.cgi?id=39179
Summary
Shrink SimpleFontData
Simon Fraser (smfr)
Reported
2010-05-16 09:29:56 PDT
SimpleFontData is 5632 bytes big, mostly because of the 255 * sizeof(FloatRect) cache, which is only used in the complex code path. We can shrink it by allocating this cache lazily. It's 1536 bytes after this change.
Attachments
Patch
(2.11 KB, patch)
2010-05-16 09:31 PDT
,
Simon Fraser (smfr)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-05-16 09:31:52 PDT
Created
attachment 56189
[details]
Patch
Anders Carlsson
Comment 2
2010-05-16 10:07:00 PDT
Comment on
attachment 56189
[details]
Patch r=me
Simon Fraser (smfr)
Comment 3
2010-05-16 10:18:40 PDT
<
rdar://problem/7990089
>
Simon Fraser (smfr)
Comment 4
2010-05-16 10:25:12 PDT
http://trac.webkit.org/changeset/59577
WebKit Review Bot
Comment 5
2010-05-16 12:04:39 PDT
http://trac.webkit.org/changeset/59577
might have broken GTK Linux 64-bit Debug
Eric Seidel (no email)
Comment 6
2010-05-16 13:09:04 PDT
I'm not sure how this could be possible, but the buildbot says this change caused a Gtk layout test to crash:
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug/r59577%20(5945)/fast/workers/storage/execute-sql-args-worker-stderr.txt
ASSERTION FAILED: !protectedObjectCount() (../../JavaScriptCore/runtime/Collector.cpp:323 void JSC::Heap::freeBlocks()) It's crashed on every build since this was checked in. It's possible this was an earlier regression which was not noticed earlier due to Gtk build system dependency tracking problems.
Eric Seidel (no email)
Comment 7
2010-05-16 13:09:43 PDT
Nevermind, looks like this test has been flaky for a while:
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug/r59574%20(5941)/results.html
Eric Seidel (no email)
Comment 8
2010-05-16 13:27:21 PDT
Filed the false positive as
bug 39183
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug