2010-05-16  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Anders Carlsson.

        Shrink SimpleFontData
        https://bugs.webkit.org/show_bug.cgi?id=39179

        Change SimpleFontData to have a pointer to the m_glyphToBoundsMap,
        and to allocate this lazily. This reduces the size of the class from
        5632 to 1536 bytes.

        * platform/graphics/SimpleFontData.h:
        (WebCore::SimpleFontData::boundsForGlyph):

git-svn-id: svn://svn.chromium.org/blink/trunk@59577 bbb929c8-8fbe-4397-9dbb-9b2b20218538