third_party/WebKit/WebCore/platform/graphics/SimpleFontData.h
@@ -192,7 +192,7 @@ private:
 
     FontPlatformData m_platformData;
 
-    mutable GlyphMetricsMap<FloatRect> m_glyphToBoundsMap;
+    mutable OwnPtr<GlyphMetricsMap<FloatRect> > m_glyphToBoundsMap;
     mutable GlyphMetricsMap<float> m_glyphToWidthMap;
 
     bool m_treatAsFixedPitch;
@@ -256,12 +256,17 @@ ALWAYS_INLINE FloatRect SimpleFontData::boundsForGlyph(Glyph glyph) const
     if (glyph == m_zeroWidthSpaceGlyph && glyph)
         return FloatRect();
 
-    FloatRect bounds = m_glyphToBoundsMap.metricsForGlyph(glyph);
-    if (bounds.width() != cGlyphSizeUnknown)
-        return bounds;
+    FloatRect bounds;
+    if (m_glyphToBoundsMap) {
+        bounds = m_glyphToBoundsMap->metricsForGlyph(glyph);
+        if (bounds.width() != cGlyphSizeUnknown)
+            return bounds;
+    }
 
     bounds = platformBoundsForGlyph(glyph);
-    m_glyphToBoundsMap.setMetricsForGlyph(glyph, bounds);
+    if (!m_glyphToBoundsMap)
+        m_glyphToBoundsMap.set(new GlyphMetricsMap<FloatRect>());
+    m_glyphToBoundsMap->setMetricsForGlyph(glyph, bounds);
     return bounds;
 }
 
